objects/SBQQ__QuoteTemplate__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteTemplateHelp</customHelpPage>
    <description>Template that controls formatting of generated PDF documents.</description>
    <fields>
        <fullName>SBQQ__AllPackageProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether all package products are printed on quote documents or only ones that are non-zero.</description>
        <inlineHelpText>Select if all package products should be printed on quote documents; otherwise, only ones that are non-zero are printed.</inlineHelpText>
        <label>Show All Package Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillToTitle__c</fullName>
        <defaultValue>&apos;Bill To&apos;</defaultValue>
        <description>Title used for Bill To section. Default value is &quot;Bill To&quot;.</description>
        <inlineHelpText>Title used for Bill To section. Default value is &quot;Bill To&quot;.</inlineHelpText>
        <label>Bill To Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BorderColor__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <description>Color of table borders expressed as a hexadecimal value.</description>
        <inlineHelpText>Color of table borders expressed as a hexadecimal value.</inlineHelpText>
        <label>Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Bottom margin on the page.</description>
        <inlineHelpText>Bottom margin on the page.</inlineHelpText>
        <label>Bottom Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if quote line items with the Bundled checkbox selected are displayed on quote documents generated from this template.</description>
        <inlineHelpText>Determines if quote line items with the Bundled checkbox selected are displayed on quote documents generated from this template.</inlineHelpText>
        <label>Show Bundled Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyCity__c</fullName>
        <description>City portion of company address displayed on quote documents.</description>
        <inlineHelpText>City portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyCountry__c</fullName>
        <description>Country portion of company address displayed on quote documents.</description>
        <inlineHelpText>Country portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyEmail__c</fullName>
        <description>Company email displayed on quote documents. Eg: sales@mycompany.com</description>
        <inlineHelpText>Company email displayed on quote documents. Eg: sales@mycompany.com</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyFax__c</fullName>
        <description>Company FAX displayed on quote documents.</description>
        <inlineHelpText>Company FAX displayed on quote documents.</inlineHelpText>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyName__c</fullName>
        <description>Name of the company as displayed on quote documents.</description>
        <inlineHelpText>Name of the company as displayed on quote documents.</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyPhone__c</fullName>
        <description>Company phone displayed on quote documents.</description>
        <inlineHelpText>Company phone displayed on quote documents.</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyPostalCode__c</fullName>
        <description>Postal code portion of company address displayed on quote documents.</description>
        <inlineHelpText>Postal code portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanySlogan__c</fullName>
        <description>Company slogan displayed on quote documents.</description>
        <inlineHelpText>Company slogan displayed on quote documents.</inlineHelpText>
        <label>Company Slogan</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyState__c</fullName>
        <description>State portion of company address displayed on quote documents.</description>
        <inlineHelpText>State portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyStreet__c</fullName>
        <description>Street portion of company address displayed on quote documents.</description>
        <inlineHelpText>Street portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Street</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentProductsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether component products are printed on quote documents, as indicated by the Component checkbox on the product</description>
        <inlineHelpText>Select if component products with the Component checkbox selected should not be printed on quote documents.</inlineHelpText>
        <label>Hide Component Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountField__c</fullName>
        <description>Field on the quote object that computes customer discount.</description>
        <inlineHelpText>Field on the quote object that computes customer discount.</inlineHelpText>
        <label>Customer Discount Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Discount (Amt)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountLabel__c</fullName>
        <defaultValue>&quot;DISCOUNT&quot;</defaultValue>
        <description>Label for customer discount</description>
        <inlineHelpText>Label used for customer discount in subtotals and totals sections.</inlineHelpText>
        <label>Customer Discount Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if quote-level customer discount is displayed in the quote totals.</description>
        <inlineHelpText>Select if you want quote-level customer discount displayed in the quote totals.</inlineHelpText>
        <label>Show Customer Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that marks the template as default, when selected.</description>
        <inlineHelpText>Checkbox that marks the template as default, when selected.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeploymentStatus__c</fullName>
        <description>Deployment status of this template. &quot;In Development&quot; templates are only visible to users with Customize Application permission.</description>
        <inlineHelpText>Deployment status of this template. Change to &quot;Deployed&quot; to make this template visible to non-admin users.</inlineHelpText>
        <label>Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                    <default>true</default>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontFamily__c</fullName>
        <description>Family of the font that should be applied to text in this template.</description>
        <inlineHelpText>Family of the font that should be applied to text in this template.</inlineHelpText>
        <label>Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Helvetica</fullName>
                    <default>true</default>
                    <label>Helvetica</label>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontSize__c</fullName>
        <defaultValue>9</defaultValue>
        <description>Default font size for text in this quote document.</description>
        <inlineHelpText>Default font size for text in this quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FooterContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template content that should be rendered in the footer.</description>
        <inlineHelpText>Template content that should be rendered in the footer.</inlineHelpText>
        <label>Footer Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Footer)</relationshipLabel>
        <relationshipName>QuoteTemplatesFooter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__FooterHeight__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Height of the footer on documents generated from this template.</description>
        <inlineHelpText>Height of the footer on documents generated from this template.</inlineHelpText>
        <label>Footer Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneratorName__c</fullName>
        <description>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</description>
        <inlineHelpText>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</inlineHelpText>
        <label>Generator Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GrandTotalPrefix__c</fullName>
        <description>Prefix for subtotal and total labels in grand totals.</description>
        <inlineHelpText>Prefix for subtotal and total labels in grand totals.</inlineHelpText>
        <label>Grand Total Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupField__c</fullName>
        <inlineHelpText>Select the field that has the values you want to use when grouping and subtotaling line items.</inlineHelpText>
        <label>Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupGap__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Gap between groups in pixels.</description>
        <inlineHelpText>Gap between groups in pixels.</inlineHelpText>
        <label>Group Gap (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupShadingColor__c</fullName>
        <defaultValue>&apos;FFFFFF&apos;</defaultValue>
        <description>Color of the shading for table cells that contain group title and description.</description>
        <inlineHelpText>Color of the shading for table cells that contain group title and description.</inlineHelpText>
        <label>Group Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupTextColor__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <description>Color for the group title and description text.</description>
        <inlineHelpText>Color for the group title and description text.</inlineHelpText>
        <label>Group Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References template content that should be rendered in the header.</description>
        <inlineHelpText>References template content that should be rendered in the header.</inlineHelpText>
        <label>Header Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Header)</relationshipLabel>
        <relationshipName>QuoteTemplatesHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderHeight__c</fullName>
        <description>Height of the header on documents generated from this template.</description>
        <inlineHelpText>Height of the header on documents generated from this template.</inlineHelpText>
        <label>Header Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__HideGroupSubtotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides group subtotals on documents generated from this template.</description>
        <inlineHelpText>Select if you want to hide group subtotals on documents generated from this template.</inlineHelpText>
        <label>Hide Group Subtotals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IntroductionTitle__c</fullName>
        <description>Title of the section that display Introduction field.</description>
        <inlineHelpText>Title of the section that display Introduction field. To display no title leave this field blank.</inlineHelpText>
        <label>Introduction Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__LeftMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Left margin on the page.</description>
        <inlineHelpText>Left margin setting on the page.</inlineHelpText>
        <label>Left Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineNumbering__c</fullName>
        <description>Specifies how line items are numbered on generated document.</description>
        <inlineHelpText>Specify how to number line items on generated documents. &quot;Start at quote&quot; numbers all lines sequentially across groups (if any). &quot;Start at group&quot; resets numbers within each group.</inlineHelpText>
        <label>Line Numbering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start at quote</fullName>
                    <default>true</default>
                    <label>Start at quote</label>
                </value>
                <value>
                    <fullName>Start at group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LineSortField__c</fullName>
        <description>Field on Quote Line used to sort line items on document generated by this template.</description>
        <inlineHelpText>Specify the field used in sorting line items on the document.</inlineHelpText>
        <label>Line Sort Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LogoDocumentId__c</fullName>
        <description>ID of the Document which conatins logo image for use in quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the logo image used in the quote PDF.</inlineHelpText>
        <label>Logo Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NotesTitle__c</fullName>
        <description>Title of the section that displays Notes field.</description>
        <inlineHelpText>Title of the section that display Notes field. To display no title, leave this field blank.</inlineHelpText>
        <label>Notes Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PageHeight__c</fullName>
        <defaultValue>11</defaultValue>
        <description>Page height in inches.</description>
        <inlineHelpText>Page height in inches.</inlineHelpText>
        <label>Page Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PageOrientation__c</fullName>
        <description>Page orientation of PDF documents generated with this template.</description>
        <inlineHelpText>Page orientation of PDF documents generated with this template.</inlineHelpText>
        <label>Page Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portrait</fullName>
                    <default>true</default>
                    <label>Portrait</label>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageWidth__c</fullName>
        <defaultValue>8.5</defaultValue>
        <description>Page width in inches.</description>
        <inlineHelpText>Page width in inches.</inlineHelpText>
        <label>Page Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscountLabel__c</fullName>
        <defaultValue>&quot;PARTNER DISCOUNT&quot;</defaultValue>
        <description>Partner discount label.</description>
        <inlineHelpText>Label used for partner discount in subtotals and totals sections.</inlineHelpText>
        <label>Partner Discount Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscountShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the quote-level partner discount is displayed in the quote totals.</description>
        <inlineHelpText>Select if you want quote-level partner discount displayed in the quote totals.</inlineHelpText>
        <label>Show Partner Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedProductsShown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if renewed products are shown on Renewal quotes generated from this template.</description>
        <inlineHelpText>Select if renewed products should be shown on Renewal quotes generated from this template.</inlineHelpText>
        <label>Show Renewed Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RightMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Right margin on the page.</description>
        <inlineHelpText>Right margin setting on the page.</inlineHelpText>
        <label>Right Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RollUpField__c</fullName>
        <description>Field on quote line object that&apos;s used to rollup lines.</description>
        <inlineHelpText>Quote line field used for roll-up. All lines where this field returns the same value will be rolled up into the first line where the value occurs.</inlineHelpText>
        <label>Roll-Up Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ShadingColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <description>Color of shading in column headers expressed as a hexadecimal.</description>
        <inlineHelpText>Color of shading in column headers expressed as a hexadecimal.</inlineHelpText>
        <label>Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShipToTitle__c</fullName>
        <defaultValue>&apos;Ship To&apos;</defaultValue>
        <description>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</description>
        <inlineHelpText>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</inlineHelpText>
        <label>Ship To Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubGroupField__c</fullName>
        <description>Name of the field to sub group by,</description>
        <inlineHelpText>Field used to sub group line items.</inlineHelpText>
        <label>Sub Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubtotalField__c</fullName>
        <description>Field to sum and display as group/quote subtotal.</description>
        <inlineHelpText>Select a Field to sum and display as group/quote subtotal.</inlineHelpText>
        <label>Subtotal Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>Regular Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubtotalLabel__c</fullName>
        <description>Label for subtotal field.</description>
        <inlineHelpText>Enter a label for the subtotal field.</inlineHelpText>
        <label>Subtotal Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermBodyIndent__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Indent in pixels of quote term body relative to the term number.</description>
        <inlineHelpText>Indent in pixels of quote term body relative to the term number.</inlineHelpText>
        <label>Term Body Indent (px)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsConditionsTitle__c</fullName>
        <defaultValue>&quot;Terms &amp; Conditions&quot;</defaultValue>
        <description>Title of the section that displays Terms &amp; Conditions.</description>
        <inlineHelpText>Title of the section that displays Terms &amp; Conditions.</inlineHelpText>
        <label>Terms &amp; Conditions Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsConditions__c</fullName>
        <description>Terms &amp; Conditions printed on every document generated with this template.</description>
        <inlineHelpText>Terms &amp; Conditions printed on every document generated with this template.</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermsNumbered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether quote terms rendered by this template are numbered.</description>
        <inlineHelpText>Select if quote terms rendered by this template should be numbered.</inlineHelpText>
        <label>Number Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TextColor__c</fullName>
        <description>Color (in HEX) applied to text in this template.</description>
        <inlineHelpText>Default color (in HEX) applied to text in this template.</inlineHelpText>
        <label>Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TopMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Top margin on the page.</description>
        <inlineHelpText>Top margin on the page.</inlineHelpText>
        <label>Top Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalField__c</fullName>
        <description>Field to sum and display as group/quote total.</description>
        <inlineHelpText>Select the Field to sum and display as group/quote total.</inlineHelpText>
        <label>Total Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Total</fullName>
                </value>
                <value>
                    <fullName>List Total</fullName>
                </value>
                <value>
                    <fullName>Customer Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TotalLabel__c</fullName>
        <description>Label for total field.</description>
        <inlineHelpText>Enter the label for the field set in Total Field.</inlineHelpText>
        <label>Total Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether quote totals should be printed on the quote document.</description>
        <inlineHelpText>Check to hide quote totals.</inlineHelpText>
        <label>Hide Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__WatermarkId__c</fullName>
        <description>Salesforce ID for the document containing the watermark image used in the quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the watermark image used in the quote PDF.</inlineHelpText>
        <label>Watermark ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Quote Template</label>
    <listViews>
        <fullName>Panel1_QuoteTemplate</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__Default__c</columns>
        <columns>SBQQ__PageOrientation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>